@@ -1,3 +1,8 @@
+2016-12-22  Martin Liska  <mliska@suse.cz>
+
+	PR tree-optimization/78886
+	* gcc.dg/tree-ssa/pr78886.c: New test.
+
 2016-12-22  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR testsuite/52641
