@@ -1,3 +1,9 @@
+2016-12-22  Martin Liska  <mliska@suse.cz>
+
+	PR tree-optimization/78886
+	* tree-ssa-strlen.c (handle_builtin_malloc): Return when LHS
+	is equal to NULL.
+
 2016-12-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR bootstrap/78817
